Mise à jour automatique de la base données francetvinfos

--- a/Programme_Maj_francetvinfo.ipynb
+++ b/Programme_Maj_francetvinfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "0cbb5db8",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
        "[2157 rows x 8 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,6 +288,13 @@
     "    return database\n",
     "\n",
     "\n",
+    "# Lien vers le fichier tvinfo-sources.json\n",
+    "tvinfo_sources_url = \"https://people.irisa.fr/Guillaume.Gravier/teaching/ENSAI/data/tvinfo-sources.json\"\n",
+    "\n",
+    "# Charger la liste des flux RSS depuis le lien tvinfo-sources.json\n",
+    "response_sources = requests.get(tvinfo_sources_url)\n",
+    "sources = json.loads(response_sources.text)\n",
+    "\n",
     "# Liste des flux RSS à parcourir\n",
     "flux_rss_a_lire = list(sources.values())\n",
     "\n",
@@ -315,262 +322,54 @@
     "\n",
     "# Afficher les premières lignes pour vérifier\n",
     "df_database_mise_a_jour\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a0714b3",
+   "metadata": {},
+   "source": [
+    "# Mettre à jour la base de données de Git"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "cdfc0242",
+   "execution_count": 4,
+   "id": "18b03e75",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_database_mise_a_jour.to_json(\"Data/francetvinfo_maj.json\", orient=\"records\", lines=True, force_ascii=False)\n",
-    "df_database_mise_a_jour.to_csv(\"Data/francetvinfo_maj.csv\", index=False)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "d778e4c2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>date</th>\n",
-       "      <th>author</th>\n",
-       "      <th>category</th>\n",
-       "      <th>content</th>\n",
-       "      <th>image_link</th>\n",
-       "      <th>image_file</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Violences contre les maires : dans l'Eure, des...</td>\n",
-       "      <td>2020-01-19T16:31:16</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>france</td>\n",
-       "      <td>Beaucoup de maires et de secrétaires de mairie...</td>\n",
-       "      <td>https://www.francetvinfo.fr/image/75rt1bxrp-70...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/sante/prevention/e...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>VIDEO. Sur le dos d'un aigle pêcheur au-dessus...</td>\n",
-       "      <td>2020-01-19T16:30:02</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>france</td>\n",
-       "      <td>#AlertePollution Rivières ou sols contaminés, ...</td>\n",
-       "      <td>https://www.francetvinfo.fr/image/75rt1br51-6d...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/france/video-sur-l...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>VIDEO. Dans le massif du Mont-Blanc, la hausse...</td>\n",
-       "      <td>2020-01-19T16:29:55</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>france</td>\n",
-       "      <td>#AlertePollution Rivières ou sols contaminés, ...</td>\n",
-       "      <td>https://www.francetvinfo.fr/image/75rt1bbzf-01...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/societe/video-mass...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>\"13h15 le dimanche\". Le Mont-Blanc, un mythe é...</td>\n",
-       "      <td>2020-01-19T16:29:48</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>france</td>\n",
-       "      <td>Point culminant de la chaîne des Alpes avec un...</td>\n",
-       "      <td>https://www.francetvinfo.fr/image/75rszkkvp-24...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/replay-magazine/fr...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Loi de bioéthique : les opposants à la PMA man...</td>\n",
-       "      <td>2020-01-19T16:08:10</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>france</td>\n",
-       "      <td>Des associations catholiques, des jeunes, des ...</td>\n",
-       "      <td>https://www.francetvinfo.fr/image/75rt1bbs2-3f...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/societe/loi-de-bio...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2152</th>\n",
-       "      <td>Nature des travaux, montant des projets : quel...</td>\n",
-       "      <td>Thu, 08 Feb 2024 18:01:04 +0100</td>\n",
-       "      <td>['Lauriane']</td>\n",
-       "      <td>economie</td>\n",
-       "      <td>Pour encourager les entreprises privées à s'ad...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/NIA-U7YVA...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/monde/environnemen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2153</th>\n",
-       "      <td>Commerce extérieur : la France échappe de just...</td>\n",
-       "      <td>Thu, 08 Feb 2024 10:21:27 +0100</td>\n",
-       "      <td>['Emmanuel Cugny']</td>\n",
-       "      <td>economie</td>\n",
-       "      <td>Selon les derniers chiffres communiqués par le...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/UI5Zf6Sad...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/replay-radio/le-br...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2154</th>\n",
-       "      <td>TotalEnergies : le géant pétrolier engrange un...</td>\n",
-       "      <td>Thu, 08 Feb 2024 10:17:07 +0100</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>economie</td>\n",
-       "      <td>Si TotalEnergies rappelle que le groupe invest...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/WGpDw9Wi4...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/economie/energie/t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2155</th>\n",
-       "      <td>Remaniement sans François Bayrou, adaptation d...</td>\n",
-       "      <td>Thu, 08 Feb 2024 10:00:02 +0100</td>\n",
-       "      <td>['France']</td>\n",
-       "      <td>economie</td>\n",
-       "      <td>Tous les jours, les informés débattent de l'ac...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/Num-i2aQo...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/replay-radio/les-i...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2156</th>\n",
-       "      <td>INFO FRANCEINFO. Changement climatique : le go...</td>\n",
-       "      <td>Thu, 08 Feb 2024 08:56:56 +0100</td>\n",
-       "      <td>['Fanny Guinochet']</td>\n",
-       "      <td>economie</td>\n",
-       "      <td>Le gouvernement réunit jeudi les industriels d...</td>\n",
-       "      <td>https://www.francetvinfo.fr/pictures/7AlMg8PRG...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>https://www.francetvinfo.fr/replay-radio/le-de...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2157 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                  title  \\\n",
-       "0     Violences contre les maires : dans l'Eure, des...   \n",
-       "1     VIDEO. Sur le dos d'un aigle pêcheur au-dessus...   \n",
-       "2     VIDEO. Dans le massif du Mont-Blanc, la hausse...   \n",
-       "3     \"13h15 le dimanche\". Le Mont-Blanc, un mythe é...   \n",
-       "4     Loi de bioéthique : les opposants à la PMA man...   \n",
-       "...                                                 ...   \n",
-       "2152  Nature des travaux, montant des projets : quel...   \n",
-       "2153  Commerce extérieur : la France échappe de just...   \n",
-       "2154  TotalEnergies : le géant pétrolier engrange un...   \n",
-       "2155  Remaniement sans François Bayrou, adaptation d...   \n",
-       "2156  INFO FRANCEINFO. Changement climatique : le go...   \n",
-       "\n",
-       "                                 date               author  category  \\\n",
-       "0                 2020-01-19T16:31:16                   []    france   \n",
-       "1                 2020-01-19T16:30:02                   []    france   \n",
-       "2                 2020-01-19T16:29:55                   []    france   \n",
-       "3                 2020-01-19T16:29:48                   []    france   \n",
-       "4                 2020-01-19T16:08:10                   []    france   \n",
-       "...                               ...                  ...       ...   \n",
-       "2152  Thu, 08 Feb 2024 18:01:04 +0100         ['Lauriane']  economie   \n",
-       "2153  Thu, 08 Feb 2024 10:21:27 +0100   ['Emmanuel Cugny']  economie   \n",
-       "2154  Thu, 08 Feb 2024 10:17:07 +0100                   []  economie   \n",
-       "2155  Thu, 08 Feb 2024 10:00:02 +0100           ['France']  economie   \n",
-       "2156  Thu, 08 Feb 2024 08:56:56 +0100  ['Fanny Guinochet']  economie   \n",
-       "\n",
-       "                                                content  \\\n",
-       "0     Beaucoup de maires et de secrétaires de mairie...   \n",
-       "1     #AlertePollution Rivières ou sols contaminés, ...   \n",
-       "2     #AlertePollution Rivières ou sols contaminés, ...   \n",
-       "3     Point culminant de la chaîne des Alpes avec un...   \n",
-       "4     Des associations catholiques, des jeunes, des ...   \n",
-       "...                                                 ...   \n",
-       "2152  Pour encourager les entreprises privées à s'ad...   \n",
-       "2153  Selon les derniers chiffres communiqués par le...   \n",
-       "2154  Si TotalEnergies rappelle que le groupe invest...   \n",
-       "2155  Tous les jours, les informés débattent de l'ac...   \n",
-       "2156  Le gouvernement réunit jeudi les industriels d...   \n",
-       "\n",
-       "                                             image_link image_file  \\\n",
-       "0     https://www.francetvinfo.fr/image/75rt1bxrp-70...        NaN   \n",
-       "1     https://www.francetvinfo.fr/image/75rt1br51-6d...        NaN   \n",
-       "2     https://www.francetvinfo.fr/image/75rt1bbzf-01...        NaN   \n",
-       "3     https://www.francetvinfo.fr/image/75rszkkvp-24...        NaN   \n",
-       "4     https://www.francetvinfo.fr/image/75rt1bbs2-3f...        NaN   \n",
-       "...                                                 ...        ...   \n",
-       "2152  https://www.francetvinfo.fr/pictures/NIA-U7YVA...        NaN   \n",
-       "2153  https://www.francetvinfo.fr/pictures/UI5Zf6Sad...        NaN   \n",
-       "2154  https://www.francetvinfo.fr/pictures/WGpDw9Wi4...        NaN   \n",
-       "2155  https://www.francetvinfo.fr/pictures/Num-i2aQo...        NaN   \n",
-       "2156  https://www.francetvinfo.fr/pictures/7AlMg8PRG...        NaN   \n",
-       "\n",
-       "                                                    url  \n",
-       "0     https://www.francetvinfo.fr/sante/prevention/e...  \n",
-       "1     https://www.francetvinfo.fr/france/video-sur-l...  \n",
-       "2     https://www.francetvinfo.fr/societe/video-mass...  \n",
-       "3     https://www.francetvinfo.fr/replay-magazine/fr...  \n",
-       "4     https://www.francetvinfo.fr/societe/loi-de-bio...  \n",
-       "...                                                 ...  \n",
-       "2152  https://www.francetvinfo.fr/monde/environnemen...  \n",
-       "2153  https://www.francetvinfo.fr/replay-radio/le-br...  \n",
-       "2154  https://www.francetvinfo.fr/economie/energie/t...  \n",
-       "2155  https://www.francetvinfo.fr/replay-radio/les-i...  \n",
-       "2156  https://www.francetvinfo.fr/replay-radio/le-de...  \n",
-       "\n",
-       "[2157 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = pd.read_csv(\"https://raw.githubusercontent.com/diakitegaoussou4996/ENSAI-PROJET-WEBMING/main/Data/francetvinfo_maj.csv\")\n",
-    "test"
+    "\n",
+    "# Fonction pour récupérer la base de données actuelle depuis GitHub\n",
+    "def telecharger_base_donnees_github(url):\n",
+    "    response = requests.get(url)\n",
+    "    data = response.text.splitlines()  # Séparer chaque ligne du fichier JSON\n",
+    "    df = pd.DataFrame([pd.read_json(line, typ='series') for line in data])\n",
+    "    return df\n",
+    "\n",
+    "# Fonction pour concaténer l'ancienne base de données avec les nouveaux articles\n",
+    "def concatener_bases_donnees(df_ancienne, df_nouveaux_articles):\n",
+    "    # Filtrer les nouveaux articles pour ne garder que ceux qui n'existent pas déjà dans l'ancienne base de données\n",
+    "    nouveaux_articles_uniques = df_nouveaux_articles[~df_nouveaux_articles['url'].isin(df_ancienne['url'])]\n",
+    "    # Concaténer les deux DataFrames\n",
+    "    df_mise_a_jour = pd.concat([df_ancienne, nouveaux_articles_uniques], ignore_index=True)\n",
+    "    return df_mise_a_jour\n",
+    "\n",
+    "# URL de la base de données sur GitHub\n",
+    "url_github = 'https://raw.githubusercontent.com/diakitegaoussou4996/ENSAI-PROJET-WEBMING/main/Data/francetvinfo_maj.json'\n",
+    "\n",
+    "# Charger la base de données actuelle\n",
+    "df_ancienne = telecharger_base_donnees_github(url_github)\n",
+    "\n",
+    "# Concaténer l'ancienne base de données avec les nouveaux articles\n",
+    "df_mise_a_jour = concatener_bases_donnees(df_ancienne, df_database_mise_a_jour)\n",
+    "\n",
+    "# Sauvegarder la base de données mise à jour localement\n",
+    "df_mise_a_jour.to_json(\"Data/francetvinfo_maj.json\", orient=\"records\", lines=True, force_ascii=False)\n",
+    "df_mise_a_jour.to_csv(\"Data/francetvinfo_maj.csv\", index=False)\n"
    ]
   },
   {
