Mise à jour automatique des articles

--- a/Programme_Maj_francetvinfo.ipynb
+++ b/Programme_Maj_francetvinfo.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013ac02b",
+   "id": "6fd5f46d",
    "metadata": {},
    "source": [
     "# Mettre à jour la base de données de Git"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "049e420f",
+   "id": "5f177963",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,262 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c63674e1",
+   "id": "917e58e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>date</th>\n",
+       "      <th>author</th>\n",
+       "      <th>category</th>\n",
+       "      <th>content</th>\n",
+       "      <th>image_link</th>\n",
+       "      <th>image_file</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Violences contre les maires : dans l'Eure, des...</td>\n",
+       "      <td>2020-01-19T16:31:16</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>france</td>\n",
+       "      <td>Beaucoup de maires et de secrétaires de mairie...</td>\n",
+       "      <td>https://www.francetvinfo.fr/image/75rt1bxrp-70...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/sante/prevention/e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>VIDEO. Sur le dos d'un aigle pêcheur au-dessus...</td>\n",
+       "      <td>2020-01-19T16:30:02</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>france</td>\n",
+       "      <td>#AlertePollution Rivières ou sols contaminés, ...</td>\n",
+       "      <td>https://www.francetvinfo.fr/image/75rt1br51-6d...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/france/video-sur-l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VIDEO. Dans le massif du Mont-Blanc, la hausse...</td>\n",
+       "      <td>2020-01-19T16:29:55</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>france</td>\n",
+       "      <td>#AlertePollution Rivières ou sols contaminés, ...</td>\n",
+       "      <td>https://www.francetvinfo.fr/image/75rt1bbzf-01...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/societe/video-mass...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"13h15 le dimanche\". Le Mont-Blanc, un mythe é...</td>\n",
+       "      <td>2020-01-19T16:29:48</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>france</td>\n",
+       "      <td>Point culminant de la chaîne des Alpes avec un...</td>\n",
+       "      <td>https://www.francetvinfo.fr/image/75rszkkvp-24...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/replay-magazine/fr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Loi de bioéthique : les opposants à la PMA man...</td>\n",
+       "      <td>2020-01-19T16:08:10</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>france</td>\n",
+       "      <td>Des associations catholiques, des jeunes, des ...</td>\n",
+       "      <td>https://www.francetvinfo.fr/image/75rt1bbs2-3f...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/societe/loi-de-bio...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2170</th>\n",
+       "      <td>Conférence de Munich : vers un retour de l'Eur...</td>\n",
+       "      <td>Mon, 19 Feb 2024 09:41:30 +0100</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>L’Europe va-t-elle se retrouver de plus en plu...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/dbmsJ-23G...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/replay-jt/francein...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2171</th>\n",
+       "      <td>REPORTAGE. Guerre en Ukraine : au cœur de l'\"é...</td>\n",
+       "      <td>Mon, 19 Feb 2024 07:55:04 +0100</td>\n",
+       "      <td>[Vanessa Descouraux, Jérémy Tuil, Tetyana Volo...</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>Presque deux ans après le début de la guerre, ...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/Fg3023xnf...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2172</th>\n",
+       "      <td>Marchés financiers : les bourses mondiales dop...</td>\n",
+       "      <td>Mon, 19 Feb 2024 07:51:03 +0100</td>\n",
+       "      <td>[Emmanuel Cugny]</td>\n",
+       "      <td>economie</td>\n",
+       "      <td>Les marchés financiers sont au plus haut en ce...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/JaUzmnERE...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>https://www.francetvinfo.fr/replay-radio/le-br...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2173</th>\n",
+       "      <td>Mer Rouge : l'Union européenne lance la missio...</td>\n",
+       "      <td>Mon, 19 Feb 2024 14:32:26 +0100</td>\n",
+       "      <td>[Franceinfo Avec Afp]</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>Les rebelles houthis du Yémen lancent des atta...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/htn2pzVTx...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.francetvinfo.fr/monde/proche-orien...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2174</th>\n",
+       "      <td>L'Allemande Ursula von der Leyen va briguer un...</td>\n",
+       "      <td>Mon, 19 Feb 2024 12:54:00 +0100</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>europe</td>\n",
+       "      <td>L'ancienne ministre allemande a officialisé sa...</td>\n",
+       "      <td>https://www.francetvinfo.fr/pictures/WAdyZpAuM...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.francetvinfo.fr/monde/europe/union...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2175 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  title  \\\n",
+       "0     Violences contre les maires : dans l'Eure, des...   \n",
+       "1     VIDEO. Sur le dos d'un aigle pêcheur au-dessus...   \n",
+       "2     VIDEO. Dans le massif du Mont-Blanc, la hausse...   \n",
+       "3     \"13h15 le dimanche\". Le Mont-Blanc, un mythe é...   \n",
+       "4     Loi de bioéthique : les opposants à la PMA man...   \n",
+       "...                                                 ...   \n",
+       "2170  Conférence de Munich : vers un retour de l'Eur...   \n",
+       "2171  REPORTAGE. Guerre en Ukraine : au cœur de l'\"é...   \n",
+       "2172  Marchés financiers : les bourses mondiales dop...   \n",
+       "2173  Mer Rouge : l'Union européenne lance la missio...   \n",
+       "2174  L'Allemande Ursula von der Leyen va briguer un...   \n",
+       "\n",
+       "                                 date  \\\n",
+       "0                 2020-01-19T16:31:16   \n",
+       "1                 2020-01-19T16:30:02   \n",
+       "2                 2020-01-19T16:29:55   \n",
+       "3                 2020-01-19T16:29:48   \n",
+       "4                 2020-01-19T16:08:10   \n",
+       "...                               ...   \n",
+       "2170  Mon, 19 Feb 2024 09:41:30 +0100   \n",
+       "2171  Mon, 19 Feb 2024 07:55:04 +0100   \n",
+       "2172  Mon, 19 Feb 2024 07:51:03 +0100   \n",
+       "2173  Mon, 19 Feb 2024 14:32:26 +0100   \n",
+       "2174  Mon, 19 Feb 2024 12:54:00 +0100   \n",
+       "\n",
+       "                                                 author  category  \\\n",
+       "0                                                    []    france   \n",
+       "1                                                    []    france   \n",
+       "2                                                    []    france   \n",
+       "3                                                    []    france   \n",
+       "4                                                    []    france   \n",
+       "...                                                 ...       ...   \n",
+       "2170                                                 []    europe   \n",
+       "2171  [Vanessa Descouraux, Jérémy Tuil, Tetyana Volo...    europe   \n",
+       "2172                                   [Emmanuel Cugny]  economie   \n",
+       "2173                              [Franceinfo Avec Afp]    europe   \n",
+       "2174                                                 []    europe   \n",
+       "\n",
+       "                                                content  \\\n",
+       "0     Beaucoup de maires et de secrétaires de mairie...   \n",
+       "1     #AlertePollution Rivières ou sols contaminés, ...   \n",
+       "2     #AlertePollution Rivières ou sols contaminés, ...   \n",
+       "3     Point culminant de la chaîne des Alpes avec un...   \n",
+       "4     Des associations catholiques, des jeunes, des ...   \n",
+       "...                                                 ...   \n",
+       "2170  L’Europe va-t-elle se retrouver de plus en plu...   \n",
+       "2171  Presque deux ans après le début de la guerre, ...   \n",
+       "2172  Les marchés financiers sont au plus haut en ce...   \n",
+       "2173  Les rebelles houthis du Yémen lancent des atta...   \n",
+       "2174  L'ancienne ministre allemande a officialisé sa...   \n",
+       "\n",
+       "                                             image_link image_file  \\\n",
+       "0     https://www.francetvinfo.fr/image/75rt1bxrp-70...       None   \n",
+       "1     https://www.francetvinfo.fr/image/75rt1br51-6d...       None   \n",
+       "2     https://www.francetvinfo.fr/image/75rt1bbzf-01...       None   \n",
+       "3     https://www.francetvinfo.fr/image/75rszkkvp-24...       None   \n",
+       "4     https://www.francetvinfo.fr/image/75rt1bbs2-3f...       None   \n",
+       "...                                                 ...        ...   \n",
+       "2170  https://www.francetvinfo.fr/pictures/dbmsJ-23G...       None   \n",
+       "2171  https://www.francetvinfo.fr/pictures/Fg3023xnf...       None   \n",
+       "2172  https://www.francetvinfo.fr/pictures/JaUzmnERE...       None   \n",
+       "2173  https://www.francetvinfo.fr/pictures/htn2pzVTx...        NaN   \n",
+       "2174  https://www.francetvinfo.fr/pictures/WAdyZpAuM...        NaN   \n",
+       "\n",
+       "                                                    url  \n",
+       "0     https://www.francetvinfo.fr/sante/prevention/e...  \n",
+       "1     https://www.francetvinfo.fr/france/video-sur-l...  \n",
+       "2     https://www.francetvinfo.fr/societe/video-mass...  \n",
+       "3     https://www.francetvinfo.fr/replay-magazine/fr...  \n",
+       "4     https://www.francetvinfo.fr/societe/loi-de-bio...  \n",
+       "...                                                 ...  \n",
+       "2170  https://www.francetvinfo.fr/replay-jt/francein...  \n",
+       "2171  https://www.francetvinfo.fr/monde/europe/manif...  \n",
+       "2172  https://www.francetvinfo.fr/replay-radio/le-br...  \n",
+       "2173  https://www.francetvinfo.fr/monde/proche-orien...  \n",
+       "2174  https://www.francetvinfo.fr/monde/europe/union...  \n",
+       "\n",
+       "[2175 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mise_a_jour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "797e1eee",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +739,7 @@
        "      <td>europe</td>\n",
        "      <td>La Cedh donne raison aux défenseurs de la vie ...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/ogf5omR_w...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/replay-radio/aujou...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -495,7 +750,7 @@
        "      <td>europe</td>\n",
        "      <td>Six points de contrôle sont actuellement bloqu...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/zU8TL7zni...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -506,7 +761,7 @@
        "      <td>europe</td>\n",
        "      <td>L’Europe va-t-elle se retrouver de plus en plu...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/dbmsJ-23G...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/replay-jt/francein...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -517,7 +772,7 @@
        "      <td>europe</td>\n",
        "      <td>Presque deux ans après le début de la guerre, ...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/Fg3023xnf...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/monde/europe/manif...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -528,7 +783,7 @@
        "      <td>economie</td>\n",
        "      <td>Les marchés financiers sont au plus haut en ce...</td>\n",
        "      <td>https://www.francetvinfo.fr/pictures/JaUzmnERE...</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
        "      <td>https://www.francetvinfo.fr/replay-radio/le-br...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -596,11 +851,11 @@
        "3     https://www.francetvinfo.fr/image/75rszkkvp-24...       None   \n",
        "4     https://www.francetvinfo.fr/image/75rt1bbs2-3f...       None   \n",
        "...                                                 ...        ...   \n",
-       "2168  https://www.francetvinfo.fr/pictures/ogf5omR_w...        NaN   \n",
-       "2169  https://www.francetvinfo.fr/pictures/zU8TL7zni...        NaN   \n",
-       "2170  https://www.francetvinfo.fr/pictures/dbmsJ-23G...        NaN   \n",
-       "2171  https://www.francetvinfo.fr/pictures/Fg3023xnf...        NaN   \n",
-       "2172  https://www.francetvinfo.fr/pictures/JaUzmnERE...        NaN   \n",
+       "2168  https://www.francetvinfo.fr/pictures/ogf5omR_w...       None   \n",
+       "2169  https://www.francetvinfo.fr/pictures/zU8TL7zni...       None   \n",
+       "2170  https://www.francetvinfo.fr/pictures/dbmsJ-23G...       None   \n",
+       "2171  https://www.francetvinfo.fr/pictures/Fg3023xnf...       None   \n",
+       "2172  https://www.francetvinfo.fr/pictures/JaUzmnERE...       None   \n",
        "\n",
        "                                                    url  \n",
        "0     https://www.francetvinfo.fr/sante/prevention/e...  \n",
@@ -618,13 +873,20 @@
        "[2173 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_mise_a_jour"
+    "import pandas as pd\n",
+    "\n",
+    "# URL du fichier mise à jour chaque jour JSON sur GitHub\n",
+    "url = 'https://raw.githubusercontent.com/diakitegaoussou4996/ENSAI-PROJET-WEBMING/main/Data/francetvinfo_maj.json'\n",
+    "# Charger les données dans un DataFrame\n",
+    "francetvinfo_mise_a_jour = pd.read_json(url, lines=True)\n",
+    "# Afficher les premières lignes du DataFrame\n",
+    "francetvinfo_mise_a_jour"
    ]
   },
   {
